force-app/main/default/objects/Aws_Credentials__c/Aws_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Aws_Credentials</label>
</CustomObject>