force-app/main/default/objects/Aws_Credentials__c/fields/BucketName__c.field-meta.xml
<CustomField>
    <fullName>BucketName__c</fullName>
    <label>BucketName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>