force-app/main/default/objects/Aws_Credentials__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <label>NamedCredential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>